# Copyright © 2018, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

tests += [
	['00000686', files('00000686.ivf'), '7333ff714f1f00df3f0d3ab5fd979599'],
	['00000687', files('00000687.ivf'), '8c704f4b5b898a2b9ce6c31e723e1b70'],
	['00000688', files('00000688.ivf'), '32a2cf31537a35100eb12abaa0aff3d0'],
	['00000689', files('00000689.ivf'), 'a0d2ebebf7c2cf14be64d0bb392b57ee'],
	['00000690', files('00000690.ivf'), '8daed6dab364ff99fd98215a1f73833f'],
	['00000691', files('00000691.ivf'), '1cf17f6b4c61ac33b77b79cdf2aa83b4'],
	['00000692', files('00000692.ivf'), 'fdc7e20f1491b8afccecf573d8eacab6'],
	['00000693', files('00000693.ivf'), '9b291dde70bc69973f2d37ba6689eb96'],
	['00000694', files('00000694.ivf'), 'f20457f4a89118587327dd3a0f13b2bc'],
	['00000695', files('00000695.ivf'), 'f71cf8411f676c41c0113bcdc1ffb761'],
	['00000696', files('00000696.ivf'), '82a42f5d0aac852074afe51632a2bd79'],
	['00000697', files('00000697.ivf'), 'd1ada256f4930363d7c211b6a0ebb696'],
	['00000698', files('00000698.ivf'), '741608eb8720bdbb00dffa5602173c52'],
	['00000699', files('00000699.ivf'), 'e8d1a39f8d1f60a5d4af049236ddea00'],
	['00000700', files('00000700.ivf'), 'aafb8bea7b0e5aa9db0ad1cc5e462386'],
	['00000731', files('00000731.ivf'), 'd5d8ccb6fbbc38e23e0e4bdae55814ba'],
	['00000732', files('00000732.ivf'), '6c4f29604973c01832fe508294ff4aca'],
	['00000733', files('00000733.ivf'), '8c6bc63c5278118b0fdeff8f802e94dc'],
	['00000734', files('00000734.ivf'), '1d71568edf2bdf5be1b300f7bce40814'],
	['00000735', files('00000735.ivf'), '0f17bc5a7776acb04398dc163ad55b8d'],
	['00000736', files('00000736.ivf'), '06d8a90a532501351e2790033eaa68de'],
	['00000737', files('00000737.ivf'), '41df02ecf3fa191820f07917f223bca5'],
	['00000738', files('00000738.ivf'), '89118585c7af72b5e2cbbaa9c5ea398d'],
	['00000739', files('00000739.ivf'), 'a4142a528a0622ceef7fc9ddb590e47d'],
	['00000740', files('00000740.ivf'), '16615875e1d43c3d81862c2167308285'],
	['00000741', files('00000741.ivf'), '8ed3a1c292adf8209cd1de3d777ecf6b'],
	['00000742', files('00000742.ivf'), '87eb4452241a401392fd9071cecd811e'],
	['00000743', files('00000743.ivf'), '6e3e31fe7a9f2d3601ba56be7af16b54'],
	['00000744', files('00000744.ivf'), '15e7d332a68b8e5215236f7c83e7a0bc'],
	['00000745', files('00000745.ivf'), '557ffd1655793e198357ee5f51e6ca6b'],
	['00000776', files('00000776.ivf'), '8bae3bd0632dc1e0ec8289afc1991cd5'],
	['00000777', files('00000777.ivf'), '9fcd5958d3b008e8a1f3cf1d77d877a9'],
	['00000778', files('00000778.ivf'), 'bfb4b5ca6c2abe7a82eece642ecb4905'],
	['00000779', files('00000779.ivf'), '0825070419587553a4cf34549ad5f1c6'],
	['00000780', files('00000780.ivf'), '13db13b99b70d0860ecc17d4ae3b5463'],
	['00000781', files('00000781.ivf'), '7f38d35bc0bacbcab2cc47cfa2fa7652'],
	['00000782', files('00000782.ivf'), '3fa473b31cbb3b0abcc8df60e3691fd2'],
	['00000783', files('00000783.ivf'), '12d69842315ab9623c7d71a18ed742cc'],
	['00000784', files('00000784.ivf'), '1b468446debaf9996e3c712462830fc4'],
	['00000785', files('00000785.ivf'), '83d1bf135fb5c496a3fee4d16237afda'],
	['00000786', files('00000786.ivf'), '32c3f863652aecd2239cfd4a36c9e9b8'],
	['00000787', files('00000787.ivf'), 'e77028d90f7076e80837eccfea898b58'],
	['00000788', files('00000788.ivf'), '7d4d7306f66790db28485d1036b88c00'],
	['00000789', files('00000789.ivf'), 'd438a95acb10d49f784e60b0149afc70'],
	['00000790', files('00000790.ivf'), '8e5fc5cf25ba42498fc421c9a342b301'],
	['00000791', files('00000791.ivf'), '48055747e115340d0986925fa1cd639e'],
]
