# Copyright © 2018, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

tests += [
	['ccvb_film_grain', files('ccvb_film_grain.ivf'), 'c299c8957b76bacb355434c03eb07ef6'],
	['frames_refs_short_signaling', files('frames_refs_short_signaling.ivf'), '11e09f68996af8b5566a08be68a2caa7'],
	['non_uniform_tiling', files('non_uniform_tiling.ivf'), '43d8ce1effb7fc38d3503d3d0f515dcb'],
	['annexb', files('annexb.obu'), 'f7f32af281ac5871d0b5de9de901588d'],
	['section5', files('section5.obu'), 'f7f32af281ac5871d0b5de9de901588d'],
	['rgb', files('rgb.ivf'), '3a98407cdaf89c3076b7cdb0f8c7a0ba'],
	['seq_hdr_op_param_info', files('seq_hdr_op_param_info.ivf'), '2ff74754025320e6894e389032f029c1'],
	['itut_t35', files('itut_t35.ivf'), 'cde548be0cf63a965e3c1120c805caf9'],
	['long_leb', files('long_leb.ivf'), 'd685b7961a77692eb4a1a4a22b3ab8ab'],
	['redundant_frame_header', files('redundant_frame_header.ivf'), 'e6ec4855e9afccd2807809398ba7ed12'],
]
