# Copyright © 2018, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

tests += [
	['issue_48', files('48_delayed.ivf'), 'c7f766b0340ed2ba1a46501ca40d64b9'],
	['issue_86', files('86_decode_model.ivf'), '8566478b3b017c838bb38414309a956a'],
	['issue_182', files('182_x.ivf'), '11e09f68996af8b5566a08be68a2caa7'],
	['issue_295', files('295_adst_precision.ivf'), 'c2b1b2f8104fbcd4fbdb94b56b39e379'],
	['issue_319', files('319_order_hint_bits_1.ivf'), '592997e4c2802bbdc162405e1c9358ec'],
	['issue_320', files('320_tennis.ivf'), '86e9c91b80bb738693c3781e728fd7f5'],
	['issue_321', files('321_tennis.ivf'), '11d9271858495c083dcad40f31808766'],
	['issue_322', files('322_tennis.ivf'), '1879ee03958ae56cd2232d7c6716ee97'],
	['issue_323', files('323_tennis.ivf'), '75d6f07e7405f42f75725ba951bc9a55'],
	['issue_324', files('324_tennis.ivf'), '53a0ba36b3a3656e6a12efb358d71f9e'],
	['issue_325', files('325_tennis.ivf'), '54aa76d8f1aed2e86cc00c1b63ad9d53'],
	['issue_326', files('326_order_hint_bits_1.ivf'), '790178c2d60cd69ab77f80e00ec14fa0'],
	['issue_327_1', files('327_tennis_1.ivf'), '24e504b1454c2a791e78f0a895970d3d'],
	['issue_327_2', files('327_tennis_2.ivf'), 'dc0609b3de072db20f9759cfe1d3685e'],
	['issue_1023', files('1023_synth.ivf'), '93ee9ce7722062861d84c6c707e94706'],
]
