# Copyright © 2018, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

tests += [
	['av1-1-b8-00-quantizer-00', files('av1-1-b8-00-quantizer-00.ivf'), '5306e7f80a3b0d57d751c842e4299f48'],
	['av1-1-b8-00-quantizer-01', files('av1-1-b8-00-quantizer-01.ivf'), '0e62f195d2e28bce4e5956428fd0d0bf'],
	['av1-1-b8-00-quantizer-02', files('av1-1-b8-00-quantizer-02.ivf'), '8f554aec9f48fe59ec2e9dfeaf2eab86'],
	['av1-1-b8-00-quantizer-03', files('av1-1-b8-00-quantizer-03.ivf'), '0dbedc47c56b6f681fede767cfe5e0a6'],
	['av1-1-b8-00-quantizer-04', files('av1-1-b8-00-quantizer-04.ivf'), 'fea157bf1451c9db59c17f823113a340'],
	['av1-1-b8-00-quantizer-05', files('av1-1-b8-00-quantizer-05.ivf'), 'd7a40cb9e12900a492ffe7ce2a164931'],
	['av1-1-b8-00-quantizer-06', files('av1-1-b8-00-quantizer-06.ivf'), '12153ecdf74ab1cf7a6354a16d8f472d'],
	['av1-1-b8-00-quantizer-07', files('av1-1-b8-00-quantizer-07.ivf'), 'fae32ead04160e1c6cf7ead61aa24bf2'],
	['av1-1-b8-00-quantizer-08', files('av1-1-b8-00-quantizer-08.ivf'), 'c4e3f6472b12d64e3c4593bd28f16eba'],
	['av1-1-b8-00-quantizer-09', files('av1-1-b8-00-quantizer-09.ivf'), 'c1c385b89e79b372b2b335fc8cbabd12'],
	['av1-1-b8-00-quantizer-10', files('av1-1-b8-00-quantizer-10.ivf'), '3807656c87ffd14ff797015c141bdee8'],
	['av1-1-b8-00-quantizer-11', files('av1-1-b8-00-quantizer-11.ivf'), 'd5047ba5a149a8673352291f38270385'],
	['av1-1-b8-00-quantizer-12', files('av1-1-b8-00-quantizer-12.ivf'), 'd962782613dbed89bf261eab45222400'],
	['av1-1-b8-00-quantizer-13', files('av1-1-b8-00-quantizer-13.ivf'), 'd5a9c2b1ef5860bc78f5baa4aca594a2'],
	['av1-1-b8-00-quantizer-14', files('av1-1-b8-00-quantizer-14.ivf'), '32546915ddf79f21c7ec97fe4019bb15'],
	['av1-1-b8-00-quantizer-15', files('av1-1-b8-00-quantizer-15.ivf'), '9f1820803e8913cdb38129c527fa8ddb'],
	['av1-1-b8-00-quantizer-16', files('av1-1-b8-00-quantizer-16.ivf'), '39621a3edebc59514af83da5eb0f47e1'],
	['av1-1-b8-00-quantizer-17', files('av1-1-b8-00-quantizer-17.ivf'), '689f5841061cd3ce7fa507a4125a6e94'],
	['av1-1-b8-00-quantizer-18', files('av1-1-b8-00-quantizer-18.ivf'), '4b7d32f43443a88af5fef7b767ccb85b'],
	['av1-1-b8-00-quantizer-19', files('av1-1-b8-00-quantizer-19.ivf'), 'd544e8884f447043fc3d0267269db036'],
	['av1-1-b8-00-quantizer-20', files('av1-1-b8-00-quantizer-20.ivf'), '0de0adfd3b6ebe2fa98eeedba9ff2e20'],
	['av1-1-b8-00-quantizer-21', files('av1-1-b8-00-quantizer-21.ivf'), 'f44561202aa0e2152371ab12cf9f05be'],
	['av1-1-b8-00-quantizer-22', files('av1-1-b8-00-quantizer-22.ivf'), '162714f0b301a18000947aa8e7e428fb'],
	['av1-1-b8-00-quantizer-23', files('av1-1-b8-00-quantizer-23.ivf'), '7dec374ab0aa0c9a828eba119f8ac877'],
	['av1-1-b8-00-quantizer-24', files('av1-1-b8-00-quantizer-24.ivf'), '361869eb168919facc445f099d39a3a1'],
	['av1-1-b8-00-quantizer-25', files('av1-1-b8-00-quantizer-25.ivf'), 'ecc4242bdd2a8c42b8dfd89c40fb798d'],
	['av1-1-b8-00-quantizer-26', files('av1-1-b8-00-quantizer-26.ivf'), '8aafc63a2493b4ecc5c7bda2f1f74486'],
	['av1-1-b8-00-quantizer-27', files('av1-1-b8-00-quantizer-27.ivf'), '9815386f30ac2141d22f08e27bb36429'],
	['av1-1-b8-00-quantizer-28', files('av1-1-b8-00-quantizer-28.ivf'), '09389e12564fc4e0c365b11269d80c18'],
	['av1-1-b8-00-quantizer-29', files('av1-1-b8-00-quantizer-29.ivf'), '35757efa0df087c3b026f63941f636ab'],
	['av1-1-b8-00-quantizer-30', files('av1-1-b8-00-quantizer-30.ivf'), '47520d21726c5580bdf19bfdb9f349f5'],
	['av1-1-b8-00-quantizer-31', files('av1-1-b8-00-quantizer-31.ivf'), '853cc6f04758d2448cf13f581237c483'],
	['av1-1-b8-00-quantizer-32', files('av1-1-b8-00-quantizer-32.ivf'), '5d7b65619f24c25c5f6e480b99357891'],
	['av1-1-b8-00-quantizer-33', files('av1-1-b8-00-quantizer-33.ivf'), '8c8c0f061746c9bf4f7b0dac73b3c894'],
	['av1-1-b8-00-quantizer-34', files('av1-1-b8-00-quantizer-34.ivf'), 'e2f44febbd5f97ae39fdb6f2628179ca'],
	['av1-1-b8-00-quantizer-35', files('av1-1-b8-00-quantizer-35.ivf'), 'e5b24445ecf53b3d1b45f3f3c4be23d3'],
	['av1-1-b8-00-quantizer-36', files('av1-1-b8-00-quantizer-36.ivf'), 'f544a0c76d97055714f9bf5bd027b305'],
	['av1-1-b8-00-quantizer-37', files('av1-1-b8-00-quantizer-37.ivf'), '2235cb6e2691a303692a1987dbee66e9'],
	['av1-1-b8-00-quantizer-38', files('av1-1-b8-00-quantizer-38.ivf'), '1b0b9eb7a6205fd7993c57c522a4907b'],
	['av1-1-b8-00-quantizer-39', files('av1-1-b8-00-quantizer-39.ivf'), 'e2b088ea535390fc253afe48aa87f96c'],
	['av1-1-b8-00-quantizer-40', files('av1-1-b8-00-quantizer-40.ivf'), '74752aaa8e561e5b2dd1ffb92ee453df'],
	['av1-1-b8-00-quantizer-41', files('av1-1-b8-00-quantizer-41.ivf'), 'c02a137af44771f9e2f5c61adc535deb'],
	['av1-1-b8-00-quantizer-42', files('av1-1-b8-00-quantizer-42.ivf'), 'aadea3262b1f5e8e255208d413f02264'],
	['av1-1-b8-00-quantizer-43', files('av1-1-b8-00-quantizer-43.ivf'), '67b29dc956ca9cbdf1e5da63917a6f01'],
	['av1-1-b8-00-quantizer-44', files('av1-1-b8-00-quantizer-44.ivf'), '900bd18b2c74ec8942da2659074999e1'],
	['av1-1-b8-00-quantizer-45', files('av1-1-b8-00-quantizer-45.ivf'), '840c070446c54ab9ab2c40a4a97d7a89'],
	['av1-1-b8-00-quantizer-46', files('av1-1-b8-00-quantizer-46.ivf'), '6f1d905bbeff9d71500bfee3463cc619'],
	['av1-1-b8-00-quantizer-47', files('av1-1-b8-00-quantizer-47.ivf'), '2dceaabc74c8a2a8b62a10734f80831d'],
	['av1-1-b8-00-quantizer-48', files('av1-1-b8-00-quantizer-48.ivf'), 'f3abdad30cf8fc019a5d9699f676e275'],
	['av1-1-b8-00-quantizer-49', files('av1-1-b8-00-quantizer-49.ivf'), '3b3de8bb56589c5b244c844f9f176bed'],
	['av1-1-b8-00-quantizer-50', files('av1-1-b8-00-quantizer-50.ivf'), '548107963e1dda19ebbe984a9750d60a'],
	['av1-1-b8-00-quantizer-51', files('av1-1-b8-00-quantizer-51.ivf'), 'fe42d9aaadae496ea3ad592b8b9a9c4d'],
	['av1-1-b8-00-quantizer-52', files('av1-1-b8-00-quantizer-52.ivf'), '0c2bdd07dfc4c52cd73a09d7a1c8bcfd'],
	['av1-1-b8-00-quantizer-53', files('av1-1-b8-00-quantizer-53.ivf'), '31b66cf4e32e87c036cce8d6a570c98c'],
	['av1-1-b8-00-quantizer-54', files('av1-1-b8-00-quantizer-54.ivf'), 'a04da7fb248fc013c24661de0aceabb7'],
	['av1-1-b8-00-quantizer-55', files('av1-1-b8-00-quantizer-55.ivf'), 'fecb142875ec89df3ca2695366dfb77a'],
	['av1-1-b8-00-quantizer-56', files('av1-1-b8-00-quantizer-56.ivf'), '3619ce78f6e8975766e639a1d29eb70b'],
	['av1-1-b8-00-quantizer-57', files('av1-1-b8-00-quantizer-57.ivf'), '9cd00611b5bb6bf43a1e97503c7806c5'],
	['av1-1-b8-00-quantizer-58', files('av1-1-b8-00-quantizer-58.ivf'), 'bc9c57d1794c3339872299d7677998ad'],
	['av1-1-b8-00-quantizer-59', files('av1-1-b8-00-quantizer-59.ivf'), 'e10186b8f16a0eb71555eb4b0f694f6e'],
	['av1-1-b8-00-quantizer-60', files('av1-1-b8-00-quantizer-60.ivf'), 'f725e361a56fb31389d5dc2fcd74e7b9'],
	['av1-1-b8-00-quantizer-61', files('av1-1-b8-00-quantizer-61.ivf'), '25775c888515c20cbdfda551a0171d3b'],
	['av1-1-b8-00-quantizer-62', files('av1-1-b8-00-quantizer-62.ivf'), '978f9a5c7c42cc6633ecfd1ca77cfff4'],
	['av1-1-b8-00-quantizer-63', files('av1-1-b8-00-quantizer-63.ivf'), '4f26fa331cd661e833d3d94e6b0e0e4e'],
]
